cluster/homelab/apps/media/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: sonarr
    namespace: media
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: prowlarr
    namespace: media
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: radarr
    namespace: media
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: overseerr
    namespace: media
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: transmission
    namespace: media
